src/renderer/components/detailed-view-components/DetailedView.scss
// SPDX-License-Identifier: Apache-2.0
//
// SPDX-FileCopyrightText: © 2024 Tenstorrent AI ULC

@import "../../scss/variables";


.bp4-card.detailed-view-card {
    padding: 0;
    border-radius: 0;
    bottom: 0;
    left: 0;
    z-index: $detailed-view-zindex;
    border: none;
    background: none;

    .detailed-view-container {
        background-color: $tt-background;
        color: $tt-white-text;
        box-shadow: 0 0 0 2px rgba(17, 20, 24, 0.25);
        border: 1px solid $tt-medium-gray;
        padding: 15px;
        padding-bottom: 20px;
        margin-bottom: 10px;
        margin-left: 10px;
    }

    .detailed-view-header {
        display: flex;
        justify-content: space-between;
        align-items: center;
        margin-bottom: 10px;

        h3 {
            text-transform: uppercase;
        }

    }

    .details-loading {
        width: 640px;
        height: 340px;
        display: grid;
        place-content: center;
        gap: 15px;

        .bp4-spinner .bp4-spinner-track {
            stroke: rgba(0, 0, 0, 0.2);
        }

        .bp4-spinner .bp4-spinner-head {
            stroke: $tt-medium-light-gray;
        }
    }
}

.detailed-view-wrap {
    background-color: $tt-background;
    display: flex;
    flex-direction: row;
    gap: 20px;


    .chip-container {
        display: flex;
        flex-direction: row;
    }

    .eth-off-chip {
        .pipe-renderer {
            transform: rotate(90deg);
        }
    }

    .node-links-wrap {
        min-width: 250px;
        padding: 5px;

        &:empty {
            display: none;
        }
    }

    span.label {
        color: #fff;
    }

    p.label {
        font-size: 16px;
        font-weight: bold;
        margin: 0;
        line-height: 1.1;

        &.single-line {
            line-height: 2.2;
        }
    }

    &.type-eth {
        p.label {
            padding: 7px 0;
        }
    }

    .node-container {
        display: flex;
        flex-direction: row;
        gap: 20px;

        .subchannel {
            .subchannel-name {
                margin-bottom: 5px;
                color: $detailed-vew-light-text;
                button{
                    margin-right: 5px;
                }
            }

            &.current {
                .subchannel-name {
                    color: $bright-highlight;
                }
            }
        }

        .node {
            display: flex;
            flex-direction: row;
            gap: 10px;
        }

    }


    .col {
        display: flex;
        flex-direction: column;
        column-gap: 10px;

        .noc2axi,
        .router {
            background-color: $detailed-vew-component;
            color: $tt-very-dark-gray;
            width: 120px;
            text-align: center;
            padding: 6px;
        }

    }

    .axi {
        background-color: $detailed-vew-component;
        color: $tt-very-dark-gray;
        width: 100%;
        text-align: center;
        padding: 6px;
    }

    .off-chip {
        display: flex;
        flex-direction: row;
        justify-content: space-around;

        .axi-dram-wrap {
            width: 150px;
            display: flex;
            flex-direction: column;

            .axi-dram {
                background-color: $detailed-vew-component;
                color: $tt-very-dark-gray;
                text-align: center;
                padding: 6px;
            }
        }
    }

    .pipe-renderer {
        display: flex;
        flex-direction: column;
        align-items: center;

        .svg {
            margin-left: 15px;

            &.centered-svg {
                margin-left: 0px;
            }
        }
    }

    &.arch-grayskull {
        .axi {
            width: 200px;
            margin: 0 auto;
        }
    }

    .pipe-selection {
        margin-bottom: 5px;
    }

    .controls-wrap {
        display: flex;
        gap: 5px;

        .bp4-button:not([class*=bp4-intent-]):disabled,
        .bp4-button:not([class*=bp4-intent-]).bp4-disabled {
            color: $tt-very-dark-gray;
        }
    }

    .detailed-view-link-info {
        max-height: 476px;
        overflow-y: auto;
    }
    .legend {
        display: inline-flex;
        justify-content: space-between;
        margin-bottom: 20px;
        flex-direction: column;
        row-gap: 5px;

        hr {
            margin: 10px 0;
        }

        .full-dram-legend {
            display: grid;
        }

        .legend-item {
            display: inline-grid;
            gap: 5px;
            grid-template-columns: 20px 1fr;

            &.dimmed {
                opacity: 0.4;
            }

            .legend-details {
                display: inline-grid;
                grid-template-columns: 1fr 1fr 0.75fr 1fr;
                gap: 15px;
            }

            .legend-text {
                font-size: 0.875rem;
            }
        }
    }

    .l1-table-wrapper {
        overflow: auto;
        height: 120px;
        min-width: 420px;
        width: fit-content;

        table {
            min-width: fit-content;
            width: 100%;
        }

        thead {
            top: 0;
            position: sticky;
            background-color: $tt-background;
        }

        .format-numbers {
            text-align: right;

            &.keep-left {
                text-align: left;
            }
        }
    }

    .memory-color-block {
        width: 15px;
        height: 15px;
        display: inline-block;
    }
}

